--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^0.8.1",
     "stylelint-webpack-plugin": "^0.10.4",
+    "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "validator": "^9.4.1",
     "webpack": "^4.1.1",
