--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
   ],
   "rules": {
     "no-console": 0,
+    "no-debugger": 0,
     "no-unused-vars": 0,
     "no-multiple-empty-lines": [1, {
       "max": 3,
