--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.1.1"
+    "react-hot-loader": "^4.1.1",
+    "react-redux": "^5.0.7",
+    "redux": "^4.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -55,7 +57,7 @@
     "file-loader": "^1.1.11",
     "html-webpack-plugin": "3.0.7",
     "mini-css-extract-plugin": "^0.4.0",
-    "node-sass": "^4.7.2",
+    "node-sass": "^4.9.2",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.0",
     "react-modal": "^3.3.2",
