Layout scalability improvements

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
     "react": "^16.2.0",
+    "react-custom-scroll": "^3.2.2",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.1.1",
     "react-redux": "^5.0.7",
