--- a/.eslintrc
+++ b/.eslintrc
@@ -9,6 +9,7 @@
   "rules": {
     "no-console": 0,
     "no-debugger": 0,
+    "no-nested-ternary": 0,
     "no-unused-vars": 0,
     "no-multiple-empty-lines": [1, {
       "max": 3,
@@ -18,7 +19,20 @@
     "comma-dangle": ["error", "never"],
     "brace-style": ["error", "stroustrup"],
     "spaced-comment": 0,
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "operator-linebreak": ["error", "after"]
   },
-  "extends": ["eslint:recommended", "plugin:react/recommended", "airbnb-base"]
+  "settings": {
+    "react": {
+      "createClass": "createReactClass",
+      "pragma": "React",
+      "version": "16.4.2"
+    },
+    "propWrapperFunctions": [ "forbidExtraProps" ]
+  },
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "airbnb-base"
+  ]
 }
