--- a/package.json
+++ b/package.json
@@ -67,9 +67,11 @@
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.22.1",
     "stylelint": "^9.5.0",
+    "stylelint-config-sass-guidelines": "^5.0.0",
     "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
+    "stylelint-scss": "^3.3.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
