--- a/package.json
+++ b/package.json
@@ -32,19 +32,19 @@
     "react": "^16.4.2",
     "react-custom-scroll": "^4.0.0",
     "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.4",
+    "react-hot-loader": "^4.3.5",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "chalk": "^2.4.0",
     "clean-webpack-plugin": "^0.1.19",
     "compass-mixins": "^0.12.10",
@@ -56,27 +56,28 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-react": "^7.11.1",
     "favicons-webpack-plugin": "0.0.9",
-    "file-loader": "^1.1.11",
+    "file-loader": "^2.0.0",
+    "filemanager-webpack-plugin": "^2.0.2",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
+    "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-modal": "^3.3.2",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.22.1",
+    "style-loader": "^0.23.0",
     "stylelint": "^9.5.0",
-    "stylelint-config-sass-guidelines": "^5.0.0",
     "stylelint-config-recess-order": "^2.0.0",
+    "stylelint-config-sass-guidelines": "^5.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
     "stylelint-scss": "^3.3.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.16.5",
+    "webpack": "^4.17.1",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.7"
   }
 }
