--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
     "filemanager-webpack-plugin": "^2.0.4",
+    "glob": "^7.1.3",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
