--- a/package.json
+++ b/package.json
@@ -29,26 +29,27 @@
     "classnames": "^2.2.6",
     "lodash": "^4.17.10",
     "normalize.css": "^8.0.0",
-    "react": "^16.4.2",
+    "react": "^16.5.0",
     "react-custom-scroll": "^4.0.0",
-    "react-dom": "^16.4.2",
-    "react-hot-loader": "^4.3.5",
+    "react-dom": "^16.5.0",
+    "react-hot-loader": "^4.3.6",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.0.1",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^9.0.0",
-    "babel-loader": "^8.0.1",
+    "babel-loader": "^8.0.2",
     "chalk": "^2.4.0",
     "clean-webpack-plugin": "^0.1.19",
-    "compass-mixins": "^0.12.10",
     "css-loader": "^1.0.0",
+    "css-mqpacker": "^7.0.0",
+    "cssnano": "^4.1.0",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.0",
@@ -57,13 +58,25 @@
     "eslint-plugin-react": "^7.11.1",
     "favicons-webpack-plugin": "0.0.9",
     "file-loader": "^2.0.0",
-    "filemanager-webpack-plugin": "^2.0.4",
+    "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.3",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
     "node-sass": "^4.9.3",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "postcss": "^7.0.2",
+    "postcss-color-function": "^4.0.1",
+    "postcss-discard-comments": "^4.0.0",
+    "postcss-easing-gradients": "^3.0.1",
+    "postcss-flexbugs-fixes": "^4.1.0",
+    "postcss-font-magician": "^2.2.1",
+    "postcss-import": "^12.0.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^5.3.0",
+    "postcss-pxtorem": "^4.0.1",
+    "postcss-scss": "^2.0.0",
+    "postcss-utilities": "^0.8.0",
     "react-modal": "^3.3.2",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
@@ -73,12 +86,12 @@
     "stylelint-config-sass-guidelines": "^5.2.0",
     "stylelint-config-standard": "^18.2.0",
     "stylelint-order": "^1.0.0",
-    "stylelint-scss": "^3.3.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.17.1",
+    "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
-    "webpack-dev-server": "^3.1.7"
+    "webpack-dev-server": "^3.1.8",
+    "webpack-md5-hash": "^0.0.6"
   }
 }
