--- a/package.json
+++ b/package.json
@@ -25,14 +25,17 @@
     "dev": 8000,
     "prod": 9000
   },
+  "peerDependencies": {
+    "stylelint": "^8.0.0 || ^9.2.1"
+  },
   "dependencies": {
     "classnames": "^2.2.6",
-    "lodash": "^4.17.10",
+    "lodash": "^4.17.11",
     "normalize.css": "^8.0.0",
     "react": "^16.5.0",
     "react-custom-scroll": "^4.0.0",
     "react-dom": "^16.5.0",
-    "react-hot-loader": "^4.3.6",
+    "react-hot-loader": "^4.3.7",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0"
   },
@@ -89,7 +92,7 @@
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-url-loader": "^2.3.2",
     "uglifyjs-webpack-plugin": "^1.3.0",
-    "webpack": "^4.18.0",
+    "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "webpack-md5-hash": "^0.0.6"
