--- a/package.json
+++ b/package.json
@@ -65,7 +65,6 @@
     "glob": "^7.1.3",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "^0.4.2",
-    "node-sass": "^4.9.3",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss": "^7.0.2",
@@ -81,6 +80,7 @@
     "postcss-scss": "^2.0.0",
     "postcss-utilities": "^0.8.0",
     "react-modal": "^3.3.2",
+    "sass": "^1.54.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
     "style-loader": "^0.23.0",
