--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "classnames": "^2.2.6",
     "lodash": "^4.17.11",
-    "normalize.css": "^8.0.0",
+    "mini-css-extract-plugin": "^2.6.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.5.0",
     "react-custom-scroll": "^4.0.0",
     "react-dom": "^16.5.0",
@@ -50,9 +51,9 @@
     "babel-loader": "^8.0.2",
     "chalk": "^2.4.0",
     "clean-webpack-plugin": "^0.1.19",
-    "css-loader": "^1.0.0",
+    "css-loader": "5.2.7",
     "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.0",
+    "cssnano": "^5.1.12",
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-loader": "^2.1.0",
@@ -64,9 +65,8 @@
     "filemanager-webpack-plugin": "^2.0.5",
     "glob": "^7.1.3",
     "html-webpack-plugin": "3.2.0",
-    "mini-css-extract-plugin": "^0.4.2",
     "opn": "^5.3.0",
-    "optimize-css-assets-webpack-plugin": "^5.0.1",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "postcss": "^7.0.2",
     "postcss-color-function": "^4.0.1",
     "postcss-discard-comments": "^4.0.0",
@@ -83,7 +83,7 @@
     "sass": "^1.54.0",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^1.3.3",
-    "style-loader": "^0.23.0",
+    "style-loader": "2.0.0",
     "stylelint": "^9.5.0",
     "stylelint-config-recess-order": "^2.0.0",
     "stylelint-config-sass-guidelines": "^5.2.0",
