--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "stylelint-order": "^1.0.0",
     "stylelint-webpack-plugin": "^0.10.5",
     "svg-url-loader": "^2.3.2",
-    "uglifyjs-webpack-plugin": "^1.3.0",
+    "terser-webpack-plugin": "^4.2.3",
     "webpack": "^4.18.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
