--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "dev": 8000,
     "prod": 9000
   },
+  "engines": {
+    "node": "12.x"
+  },
   "peerDependencies": {
     "stylelint": "^8.0.0 || ^9.2.1"
   },
